Fix CSS alignment values in the statistics filter styling file

--- a/jpro-routing/dev/src/main/resources/one/jpro/platform/routing/dev/statisticsfilter.css
+++ b/jpro-routing/dev/src/main/resources/one/jpro/platform/routing/dev/statisticsfilter.css
@@ -5,26 +5,25 @@
 }
 
 .statisticsfilter-statbox {
-    -fx-alignment: left;
+    -fx-alignment: center-left;
     -fx-padding: 6;
-//-fx-background-color: lightblue;
-// lighter blue
--fx-background-color: #e6f3ff;
     -fx-background-radius: 6;
 }
 
 .statisticsfilter-statbox-labels {
     -fx-alignment: center-right;
 }
+
 .statisticsfilter-statbox-labels .label {
     -fx-font-size: 12px;
     -fx-text-alignment: right;
 }
 
 .statisticsfilter-statbox-values {
-    -fx-padding: 0 8  0 8;
+    -fx-padding: 0 8 0 8;
     -fx-alignment: center-right;
 }
+
 .statisticsfilter-statbox-values .label {
     -fx-font-size: 12px;
     -fx-font-weight: bold;
@@ -34,6 +33,7 @@
 .statisticsfilter-statbox-units {
     -fx-alignment: center-right;
 }
+
 .statisticsfilter-statbox-units .label {
     -fx-font-size: 12px;
     -fx-font-weight: bold;
